# Modern_Cpp_Training

./: README.md
BitSet/: CMakeLists.txt
BitSet/src/: main.cpp
Concepts/: CMakeLists.txt
Concepts/src/: main.cpp
Expected/: CMakeLists.txt
Expected/src/: main.cpp
Flat/: CMakeLists.txt
Flat/src/: main.cpp
Generate/: CMakeLists.txt
Generate/src/: main.cpp
HelloModule/: CMakeLists.txt  install.sh
HelloModule/src/app/: main.cpp
HelloModule/src/calc_module/: calc.cpp  calc.cppm
Lambda/: CMakeLists.txt
Lambda/src/: main.cpp
Loops/: CMakeLists.txt
Loops/src/: main.cpp
MoveSemanticPlayground/: CMakeLists.txt
MoveSemanticPlayground/src/: main.cpp
Notifications/: CMakeLists.txt
Notifications/src/: main.cpp
Optional/: CMakeLists.txt
Optional/src/: main.cpp
Ranges/: CMakeLists.txt
Ranges/src/: main.cpp
Regex/: CMakeLists.txt
Regex/src/: main.cpp
SecurePersonData/: CMakeLists.txt
SecurePersonData/src/: main.cpp
SourceLocation/: CMakeLists.txt
SourceLocation/src/: main.cpp
Span/: CMakeLists.txt
Span/src/: main.cpp
Syncstream/: CMakeLists.txt
Syncstream/src/: main.cpp
Tuples/: CMakeLists.txt
Tuples/src/: main.cpp
TypeParser/: CMakeLists.txt
TypeParser/src/: main.cpp
TypeParser/src/test/: test.cpp
TypeParser/src/typeParser/: typeParser.cpp  typeParser.hpp
UsingAttributes/: CMakeLists.txt
UsingAttributes/src/: main.cpp
Variant/: CMakeLists.txt
Variant/src/: main.cpp
VariantAndFunctions/: CMakeLists.txt
VariantAndFunctions/src/: main.cpp
VariantStore/: CMakeLists.txt
VariantStore/src/: main.cpp
ViewsEnumerate/: CMakeLists.txt
ViewsEnumerate/src/: main.cpp
