cmake_minimum_required(VERSION 3.25 FATAL_ERROR)

project(Variant LANGUAGES CXX)

set(PROGRAM_NAME test)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF) 

add_executable(${PROGRAM_NAME} src/main.cpp)

install(TARGETS ${PROGRAM_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
